--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,70 @@
-# Ignore Python bytecode
-__pycache__/
-*.pyc
-*.pyo
-
-# Ignore virtualenv folders (if any)
-env/
+# Virtual Environment
+transcript_env/
 venv/
-.lib/
-
-# Ignore build and dist folders
-build/
-dist/
-
-# Ignore executables and binaries
-*.exe
-*.dll
-*.so
-
-# Ignore logs, temp files
-*.log
-*.tmp
-*.zip
-
-# Ignore environment files
+env/
 .env
-.env.local
 
-# Ignore IDE/editor config files
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec.swp
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Temporary files
+*.tmp
+temp_audio.*
+*.mp3
+*.wav
+*.m4a
+
+# IDE
 .vscode/
 .idea/
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Output files
+transcripts/
+output/
+downloads/
